# BenchSense

./: .gitignore  README.md  main.py  pyproject.toml
bench_sense/: __init__.py  config.py  logger.py  main.py  sensor.py  tracking.py
src/: main.py  sensor.py  tracking.py
tests/: test_bench_sense.py
