[tool.poetry]
name = "bench_sense"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.5"
"RPi.GPIO" = "^0.7.0"
gspread = "^3.1"
gspread_asyncio = "^1.0"
oauth2client = "^4.1"
pytz = "^2019.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
start = "bench_sense:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
